phonon (4:4.3.80-1) UNRELEASED; urgency=low

  * New upstream release.

  [ Fathi Boudra ]
  * Remove patches:
    - 02_disable_phonon_build.diff - dropped.
    - 03_r950739_fullscreen_hidecursor.diff - stolen upstream.
    - 05_924144_encoding_local_files_fix.diff - stolen upstream.
    - 06_983650_play_filenames_with_hash.diff - stolen upstream.
    - 07_feature_backport_xine_equalizer.diff - stolen upstream.
  * Update debian/control:
    - Bump build dependencies (debhelper and pkg-kde-tools).
    - Add libpulse-dev build dependency.
    - Bump Standards-Version from 3.8.2 to 3.8.4 (no changes needed).

  [ Ana Beatriz Guerrero Lopez ]
  * Remove myself from Uploaders.

  [ Modestas Vainius ]
  * Change my email address to modax@debian.org in Uploaders field.
  * Fix Vcs-Browser URL.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 12 Feb 2010 13:23:15 +0100

phonon-backends (4:4.3.1-5) unstable; urgency=low

  +++ Changes by Modestas Vainius:

  * Rename source package to phonon-backends.
  * Add phonon-backends-dbg debug package.
  * Add patch (06_983650_play_filenames_with_hash.diff) to fix playback of
    files with hash (#) symbol in their name (Closes: #546271).
  * Backport Xine equalizer support from Phonon trunk (patch
    07_feature_backport_xine_equalizer.diff).

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 15 Oct 2009 20:31:26 +0300

phonon (4:4.3.1-4) unstable; urgency=low

  +++ Changes by Modestas Vainius:

  * Install backends to /usr/lib/qt4 (Closes: #539623). Otherwise pure Qt4
    applications cannot find any backends.

  +++ Changes by Sune Vuorela:

  * Backport a bugfix from upstream to fix encoding issues with filenames.
  * Fix not-installed file and remove trailing whitespaces

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 06 Aug 2009 22:36:33 +0200

phonon (4:4.3.1-3) unstable; urgency=low

  +++ Changes by Fathi Boudra:
