@@ -1,0 +1,3 @@
+usr/include/phonon usr/include/qt4/phonon
+usr/include/phonon/phonon usr/include/phonon/Phonon
+
