@@ -1,6 +1,7 @@
 #!/usr/bin/make -f
 
 include /usr/share/pkg-kde-tools/qt-kde-team/1/debian-qt-kde.mk
-DEB_CMAKE_EXTRA_FLAGS += -DPLUGIN_INSTALL_DIR=/usr/lib/qt4/
 
-DEB_DH_SHLIBDEPS_ARGS_ALL = -- -xphonon
+DEB_CMAKE_EXTRA_FLAGS += -DPLUGIN_INSTALL_DIR=/usr/lib/qt4/
+#DEB_DH_MAKESHLIBS_ARGS_libphonon4 = -V
+DEB_DH_SHLIBDEPS_ARGS_ALL := -- -xphonon
